change routes for editions and cards and also in all accompanying files
